PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/CorporateCardBilling__c.object-meta.xml
<CustomObject>
    <label>법인카드청구내역</label>
    <nameField>
        <displayFormat>CB-{YY}{MM}-{00000}</displayFormat>
        <label>법인카드청구내역</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>