PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/Acquire__c.field-meta.xml
<CustomField>
    <fullName>Acquire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>매입내역(승인)</label>
    <referenceTo>CATS_TMP_ACQUIRE__c</referenceTo>
    <relationshipLabel>법인카드청구내역</relationshipLabel>
    <relationshipName>CorporateCardBilling_CATS_TMP_ACQUIRE</relationshipName>
    <type>Lookup</type>
</CustomField>