PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/AcquireCancel__c.field-meta.xml
<CustomField>
    <fullName>AcquireCancel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>매입내역(취소)</label>
    <referenceTo>CATS_TMP_ACQUIRE__c</referenceTo>
    <relationshipLabel>법인카드청구내역 (매입내역(취소))</relationshipLabel>
    <relationshipName>CorporateCardBilling_CATS_TMP_ACQUIRE2</relationshipName>
    <type>Lookup</type>
</CustomField>