PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/BillingAmount__c.field-meta.xml
<CustomField>
    <fullName>BillingAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>결제금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>