PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/BillingDate__c.field-meta.xml
<CustomField>
    <fullName>BillingDate__c</fullName>
    <label>결제일시</label>
    <type>DateTime</type>
</CustomField>