PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/CancelClassification__c.field-meta.xml
<CustomField>
    <fullName>CancelClassification__c</fullName>
    <label>매출취소구분</label>
    <length>18</length>
    <type>Text</type>
</CustomField>