PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <label>카드번호</label>
    <length>16</length>
    <type>Text</type>
</CustomField>