PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/CorporateCard__c.field-meta.xml
<CustomField>
    <fullName>CorporateCard__c</fullName>
    <label>법인카드</label>
    <referenceTo>CorporateCard__c</referenceTo>
    <relationshipLabel>법인카드청구내역</relationshipLabel>
    <relationshipName>CorporateCardBilling_CorporateCard</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>