PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/CountryType__c.field-meta.xml
<CustomField>
    <fullName>CountryType__c</fullName>
    <label>국내외구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>