PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/ExpectedBillingDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedBillingDate__c</fullName>
    <label>청구일자</label>
    <type>Date</type>
</CustomField>