PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/fm_CardCompany__c.field-meta.xml
<CustomField>
    <fullName>fm_CardCompany__c</fullName>
    <formula>CASE(
     CorporateCard__r.CardCompany__c  ,
    &quot;01&quot;, &quot;비씨&quot;,
    &quot;02&quot;, &quot;국민&quot;,
    &quot;03&quot;, &quot;하나&quot;,
    &quot;04&quot;, &quot;삼성&quot;,
    &quot;06&quot;, &quot;신한&quot;,
    &quot;07&quot;, &quot;현대&quot;,
    &quot;08&quot;, &quot;롯데자사&quot;,
    &quot;11&quot;, &quot;씨티, 한미&quot;,
    &quot;12&quot;, &quot;NH채움&quot;,
    &quot;13&quot;, &quot;수협&quot;,
    &quot;14&quot;, &quot;신협&quot;,
    &quot;15&quot;, &quot;우리&quot;,
    &quot;16&quot;, &quot;하나SK&quot;,
    &quot;21&quot;, &quot;광주&quot;,
    &quot;22&quot;, &quot;전북&quot;,
    &quot;23&quot;, &quot;제주&quot;,
    &quot;24&quot;, &quot;산은캐피탈&quot;,
    &quot;25&quot;, &quot;해외비자&quot;,
    &quot;26&quot;, &quot;해외마스터&quot;,
    &quot;27&quot;, &quot;해외다이너스&quot;,
    &quot;28&quot;, &quot;해외AMX&quot;,
    &quot;29&quot;, &quot;해외JCB&quot;,
    &quot;32&quot;, &quot;우체국&quot;,
    &quot;33&quot;, &quot;저축은행&quot;,
    &quot;34&quot;, &quot;은련&quot;,
    &quot;35&quot;, &quot;새마을금고&quot;,
    &quot;36&quot;, &quot;KDB산업&quot;,
       &quot;&quot; 
)</formula>
    <label>카드사</label>
    <type>Text</type>
</CustomField>