PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/fm_CardNickname__c.field-meta.xml
<CustomField>
    <fullName>fm_CardNickname__c</fullName>
    <formula>CorporateCard__r.CardNickname__c</formula>
    <label>카드별칭</label>
    <type>Text</type>
</CustomField>