PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/fm_CardNumber__c.field-meta.xml
<CustomField>
    <fullName>fm_CardNumber__c</fullName>
    <formula>CorporateCard__r.CardNumber__c</formula>
    <label>법인카드 카드번호</label>
    <type>Text</type>
</CustomField>