PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/fm_HolderName__c.field-meta.xml
<CustomField>
    <fullName>fm_HolderName__c</fullName>
    <formula>CorporateCard__r.HolderName__c</formula>
    <label>소지자고객명</label>
    <type>Text</type>
</CustomField>