PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/fm_PaymentAccount__c.field-meta.xml
<CustomField>
    <fullName>fm_PaymentAccount__c</fullName>
    <formula>CorporateCard__r.PaymentAccount__c</formula>
    <label>결제계좌번호</label>
    <type>Text</type>
</CustomField>