PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/fm_PaymentBank__c.field-meta.xml
<CustomField>
    <fullName>fm_PaymentBank__c</fullName>
    <formula>CorporateCard__r.PaymentBank__c</formula>
    <label>결제은행</label>
    <type>Text</type>
</CustomField>