PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <externalId>true</externalId>
    <label>매입 일련번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>