PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/StoreBusinessNumber__c.field-meta.xml
<CustomField>
    <fullName>StoreBusinessNumber__c</fullName>
    <label>사업자번호</label>
    <length>225</length>
    <type>Text</type>
</CustomField>