PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/Tax_BusinessType2__c.field-meta.xml
<CustomField>
    <fullName>Tax_BusinessType2__c</fullName>
    <label>업종</label>
    <length>255</length>
    <type>Text</type>
</CustomField>