PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/Tax_deduction1__c.field-meta.xml
<CustomField>
    <fullName>Tax_deduction1__c</fullName>
    <label>공제여부결정</label>
    <length>255</length>
    <type>Text</type>
</CustomField>