PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/Tax_deduction2__c.field-meta.xml
<CustomField>
    <fullName>Tax_deduction2__c</fullName>
    <label>비고</label>
    <length>255</length>
    <type>Text</type>
</CustomField>