PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/Tax_StoreType__c.field-meta.xml
<CustomField>
    <fullName>Tax_StoreType__c</fullName>
    <label>가맹점유형</label>
    <length>255</length>
    <type>Text</type>
</CustomField>