PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/Tips1__c.field-meta.xml
<CustomField>
    <fullName>Tips1__c</fullName>
    <label>봉사료</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>