PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>부가세</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>