PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/fields/VATYN__c.field-meta.xml
<CustomField>
    <fullName>VATYN__c</fullName>
    <label>부가세 YN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>