PA_Education/TestMenifest/force-app/main/default/objects/CorporateCardBilling__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CorporateCard__c</columns>
    <columns>StoreName__c</columns>
    <columns>BillingDate__c</columns>
    <columns>BillingAmount__c</columns>
    <columns>fm_ExpenseApplicatedYn__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>